Name:                ShowF
Version:             0.0.0
Cabal-Version:       >= 1.6
Synopsis:            Showable functors
Category:            Text
Description:
  Provides a Show-like class for functors
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2013 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/ShowF.git

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5
  Exposed-Modules:     
                       Text.ShowF
  ghc-options:         -Wall
